[package]
name = "business-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = "1.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.92"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
chrono-tz = "0.8.1"
reqwest = { version = "0.11.4", features = ["json"] }
env_logger = "0.10.0"
async-nats = "0.27.1"
bytes = "1.4.0"
futures = "0.3.26"
rand = "0.8.5"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
